<resources>
    <string name="app_name">ZIPP-E Driver</string>

    <string-array name="gender_array">
        <item>Your Gender</item>
        <item>Female</item>
        <item>Male</item>
        <item>Rather Not Say</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="Open" />
    <string name="Close" />
    <string name="driver_name" />
    <string name="mobile" />
    <string name="change_language" />
    <string name="dark_mode">DARK MODE</string>
    <string name="history">History</string>
    <string name="click_choose_picture">Click/Choose Picture</string>
    <string name="upload">UPLOAD</string>
    <string name="off_duty">Off Duty</string>
    <string name="on_duty">On Duty</string>
    <string name="new_rides">NEW rides</string>
    <string name="ride_in_process">ride IN PROCESS</string>
    <string name="user_information">User Information</string>
    <string name="view_map">View Location On Map</string>
    <string name="user_name">User Name</string>
    <string name="user_phone">User Phone no.</string>
    <string name="enter_otp_provided_by_user">enter otp provided by user</string>
    <string name="start_ride">START RIDE</string>
    <string name="cancel">cancel</string>
    <string name="ride_cost">Ride Cost:</string>
    <string name="accept_payment_via">Accept Payment Via:</string>
    <string name="cash">CASH</string>
    <string name="upi_payment">UPI Payment</string>
    <string name="hey_partner_with">HEY! PARTNER WITH</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="rate_your_client">rate your client</string>
    <string name="thanks_from_zippe">Thank you for serving ZIPP-E</string>
    <string name="i_am_not_satisfied_because">I am not satisfied with</string>
    <string name="please_specify">Please Specify</string>
    <string name="submit">Submit</string>
    <string name="att_client">Attitude of client</string>
    <string name="client_punctuality">Client Punctuality</string>
    <string name="cleanliness">Client Cleanliness</string>
    <string name="any_other">Any other</string>
    <string name="thanks_for_feedback">Thank you for your feedback. We promise to take appropriate action.</string>
    <string name="offline">YOU ARE OFFLINE</string>
    <string name="ride_completed">Ride completed successfully !</string>
    <string name="time_out">Ride time out</string>
    <string name="ride_fail">Ride failed</string>
    <string name="canceled_by_user">TRIP HAS BEEN CANCELED BY USER ! </string>
    <string name="mark_offline">YOU WILL BE MARKED OFFLINE !\nCONTINUE?</string>
    <string name="something_wrong">Something went wrong! Please try again later.</string>
    <string name="pick_up">Pick Up</string>
    <string name="destination">Destination</string>
    <string name="your_location">You are here</string>
    <string name="completed_rides">COMPLETED RIDE HISTORY</string>
    <string name="total_earnings">Your earnings</string>
    <string name="enter_mobile">ENTER MOBILE</string>
    <string name="request_otp">request otp</string>
    <string name="enter_otp_to_verify">ENTER OTP TO VERIFY</string>
    <string name="login_key">LOGIN KEY</string>
    <string name="no_new_rides">No new Ride Available currently.</string>
    <string name="latest_to_oldest_u_2193">Latest to oldest</string>
    <string name="e_cycle">E-CYCLE</string>
    <string name="e_scooty">E-SCOOTY</string>
    <string name="e_bike">E-BIKE</string>
    <string name="zbee">ZBEE</string>
    <string name="date">Date</string>
    <string name="vehicle">Vehicle</string>
    <string name="message_rs">₹ %1$s </string>
    <string name="message_min">%1$s mins</string>
    <string name="colon">:</string>
    <string name="ride_summary">Ride Summary</string>
    <string name="trip">Trip</string>
    <string name="ride_time">ride time</string>
    <string name="locked">You have been locked. Please contact admin.</string>

</resources>
