<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context="com.zp_driver.ActivityRideAccepted">

        <LinearLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/user_information"
                android:textAllCaps="true"
                android:textSize="20sp" />



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp">

                <ImageView
                    android:id="@+id/photo_client"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="55dp"
                    android:layout_toEndOf="@id/photo_client"
                    android:text="Mr. XYZ"
                    android:textAllCaps="true"
                    android:textSize="18sp" />

                <RelativeLayout
                    android:id="@+id/rl_p"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/userName"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@id/photo_client">

                    <TextView
                        android:id="@+id/userPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:text="+91 7060743705"
                        android:textAllCaps="true"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@id/userPhone"
                        android:src="@drawable/phone" />
                </RelativeLayout>
            </RelativeLayout>

            <include
                android:id="@+id/layoutZippeee"
                layout="@layout/zippe_logo"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:id="@+id/txt1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/enter_otp_provided_by_user"
                android:textAllCaps="true"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/otp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rect_box_outline"
                android:gravity="center"
                android:hint="OTP"
                android:inputType="number"
                android:maxLength="4"
                android:textAlignment="center"
                android:textColor="@color/txtColor" />

            <Button
                android:id="@+id/btn_startRide"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/btn_bkg"
                android:text="@string/start_ride" />
            <Button
                android:id="@+id/viewMap"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/btn_bkg"
                android:text="@string/view_map" />
            <Button
                android:id="@+id/btn_cancelRide"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/btn_bkg"
                android:text="@string/cancel" />
        </LinearLayout>

    </ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>